fix for photo cropping issue

--- a/app/webroot/css/common.css
+++ b/app/webroot/css/common.css
@@ -44,3 +44,77 @@ tr.shown td.details-control {
 .text-default {
     color: #333;
 }
+
+.viewslide {
+    cursor: pointer;
+}
+
+.slider-header {
+    border: none !important;
+}
+.modal-body {
+    padding:5px !important;
+}
+.modal-content {
+    border-radius:0;
+}
+.modal-dialog img {
+    text-align:center;
+    margin:0 auto;
+}
+.controls{          
+    width:50px;
+    display:block;
+    font-size:11px;
+    padding-top:8px;
+    font-weight:bold;          
+}
+.next {
+    float:right;
+    text-align:right;
+}
+/*override modal for demo only*/
+.modal-dialog {
+    max-width:500px;
+    padding-top: 90px;
+}
+@media screen and (min-width: 768px){
+    .modal-dialog {
+        width:500px;
+        padding-top: 90px;
+    }          
+}
+@media screen and (max-width:1500px){
+    #ads {
+        display:none;
+    }
+}
+
+.imgareaselect-border1 {
+	border: dashed 1px #000;
+}
+
+.imgareaselect-border2 {
+    border: dashed 1px #000;
+}
+
+.imgareaselect-border3 {
+    border: dashed 1px #000;
+}
+
+.imgareaselect-border4 {
+    border: dashed 1px #000;
+}
+
+.imgareaselect-border1, .imgareaselect-border2,
+.imgareaselect-border3, .imgareaselect-border4 {
+    opacity: 0.5;
+    filter: alpha(opacity=50);
+}
+
+.imgareaselect-handle {
+    background-color: #fff;
+    border: solid 1px #000;
+    opacity: 0.5;
+    filter: alpha(opacity=50);
+}
